# snippets

./: .clang-format  Makefile  README.md  awesome-alloy.md  c-dbc.c  cleanup.py  dbc.lua  find-popular-func.sh  helpers.h  ldd2ldflags.py  lj-bug.lua  lunar  mailmap  perf.csv  perf.py  perf_plot.py  pgpool-v2.0-strict.pml  pgpool-v2.2-serializable.pml  snippets.c  tappy-example.py  tgbot.go  tk-gui.py  yielding-jepsen.lua
RODOS3/: Makefile  README.md  RODOS3  RODOS3.cpp  RODOS3.h  ReadMe.txt  install.sh  main.cpp  usb.cpp  usb.h
albert-modules/: README.md  requirements.txt
antonov/: Makefile  README.md  book.md  title.txt
archive/microb/: 2d.c  CMakeLists.txt  cmake_install.cmake  config.h  main.c  malloc.c  sigbench.c
archive/microb/tools/: csv2junit.py
asm/: 1.s
bash-tests/: README.md  example.sh
c-testing/: README.md
cocci-rules/: error-handling.cocci
codespell-ru/: README.md  get_typos.py
coq/: Makefile  README.md  example.v  nahas_tutorial.v  sf.v
criu-demo/: README.md  download-original  hda_helpers.sh
deviation/: .travis.yml  Makefile  README.md  deviation.1  deviation.c  stat.md
docs/: Fuzzing_Tarantool.md  app-issues.md  build-tex.md  shell-scripting.md  test-run-profile.md
dt-tests/: .gitignore  README.md  cmp_test.py  deltas_test.py  math_test.py  requirements.txt  strftime_test.py  strptime_test.py
freerdp/: server.c
fruitycase/: README.md  main.go
glibc-vs-musl/: Makefile  a.c  main  main.c
go-tia/: size.go  size_test.go
grammars/: README.md  bc.lark  common.lark  generate.py  json.lark  mime.lark  palindrome.lark  pf-conf.lark  postal.lark  rfc-1738.lark  robotstxt.lark  unicode.lark  yaml.lark
heisenbug-2022/: README.md  TG.md  add_tests.py  libfuzzer-example.c  trace-pc.c
highload-2022/: README.md  z3_example.lua  z3_example.md  z3_example.smt
honk-theme/: local.css  mastodon-dark.css  mastodon-light.css
hypothesis-fsobj/: README.md  cmocka.c  hypothesis_fsobj.py
ipodsync/: README.md  ipodsync
kcovprint/: kcovprint.c
languagetool-infostyle/: README.md
lua-libssh2/: README.md  libssh2-scm-1.rockspec
lua-tools/: lua-dbc.lua  lua-mutations.py  ttop.lua  yielding-jepsen.lua
luamut/: README.md
luzer-tests/: djot.dict  djot_parse.lua  lpeg_match.lua  lua-msgpack_pack.lua  lua-parser_parse.lua  lua-rds-parser.patch  luacheck_parser_parse.lua  prosody_net_http_parser.lua  rds_parser_parse.lua
microb/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  SDLTest.c  config.h.in  cpuid.c  fsync.c  getifaddrs.c  main.c  mmap.c  vmm.c
microb/tools/: gettime.py  net_time.c
model-checking/: README.md
mutation-testing/: mutate.py  mutate.sh  mutate1.sh  mutation-template.html  mutation.py
newtab-with-beautiful-maps/: README.md
ostest-cmocka/: README.md  os-test-io.c  os-test-mem.c  os-test-udp.c
ouroboros/: README.md  main.go  ouroboros  ouroboros-config.json  ouroboros.py  rr
parse-testanything/: README.md  parse.y
patches/: 0001-Update-creack-termios-lib-to-the-last-commit.patch  0002-creack-termios-Allow-to-use-termios-struct-and-funcs.patch  QEMU-Slirp-add-qmp-method-query-ip-table.patch  asciinema-0003-Fix-compilation-on-OpenBSD.patch  casr-0001-casr-support-Lua.patch  cgit-0001-ui-commit-add-support-of-test-results.patch  cgit-0002-ui-commit-add-testres-filter.patch  docker-multitenancy-3b7ea4d8c3c217f1efc303d3b5e97c3743db6fe0.patch  docker-multitenancy.readme  httpd_broken_formatting.patch  libvirt-1ed32989ea-0001-Add-LibVirt-driver-with-OpenBSD-VMM-support.patch  libvirt-2.0.0-openbsd-18.10.2016.patch  libvirt-openbsd-c57f3fd2f8999d17e01272246b26d31179ab7b6e.patch  multibootsusb-ksh.patch  openbsd-0001-Code-coverage-support-in-kernel.patch  openbsd-0001-Connect-missed-testsuites.patch  openbsd-0001-support-of-PKG_REQUIRED.patch  tap_support.patch  z3.patch
ploop-tests/: Makefile.am  README.md  configure.ac
ploop-tests/tests/: device-grow  device-snapshot  fs-resize-online  functions  t00001-mount-raw-ploop  t00002-take-snapshot-raw-ploop  t00003-change-fmt_version  t00004-device-grow  t00004-device-grow-online  t00005-device-snapshot  t00006-device-snapshot-merge-online  t00008-fs-resize-online  t00009-fs-resize-offline  tap-functions
postgresql-atomics/: test_perf.py
printfault/: Makefile  README.md  printfault.c  test-sample.c
promela/: 2pc.pml  README.md  server.pml
radar/: Makefile  README.md  config.ini
runtest/: Makefile  README.md  TODO  main.c  runtest.1  test_list.c  test_list.h  utils.c  utils.h
searchql/: main.go
so-getobjname/: so-getobjname.lua
software-bugs/: README.md  config.toml
sqlfuzz/: CMakeLists.txt  README.md  disabled_queries_parser.cc  shadow_table_fuzzer.cc  sql_expr_fuzzer.cc  sql_fuzzer.cc  sql_generate_corpus.cc  sql_multithreaded_fuzzer.cc  sql_printf_fuzzer.cc  sql_query_proto_to_string.cc  sql_query_proto_to_string.h  sql_run_queries.cc  sql_run_queries.h  sql_strftime_fuzzer.cc  sqlite3.h
subunit_v1.y/: Makefile  README.md  parse_subunit_v1.l  parse_subunit_v1.y
testanything.y/: CMakeLists.txt  Makefile  README.md  parse.l  parse_common.h  parse_testanything.l  parse_testanything.y  test  testanything.l  testanything.y
testanything.y/t/: t5  t6  t9
testres/: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  TODO.md  cmp.c  cmp.h  debug.h  httpd.conf  manage_tests.c  manage_tests.h  parse.c  parse.h  parse_common.c  parse_common.h  parse_junit.c  parse_junit.h  parse_query.c  parse_subunit_v1.c  parse_subunit_v1.h  parse_subunit_v2.c  parse_subunit_v2.h  parse_testanything.c  parse_testanything.h  sha1.c  sha1.h  storage.c  testres.1  testres.c  testres.css  testres.h  tf-idf.c  thttpd.conf  ui_common.c  ui_common.h  ui_console.c  ui_console.h  ui_http.c  ui_http.h
testres/search/: Makefile  parse_query.l  parse_query.y  test-samples
testres/search/t/: t2  t3  t4  t5
testres/tests/: Makefile  test_html_output.py  testres_tests.c
testres/tests/fuzz/: Makefile
testres/tests/load/: Makefile
testres/tests/regress/: Makefile
testres/tests/shell/: Makefile  setup.sh
testres/tests/unit/: Makefile  testres_tests.c
(+276 files in other folders)
