PACKAGE_BUGREPORT = "devel@openvz.org"

TESTS = tests/t00001-mount-raw-ploop \
        tests/t00002-take-snapshot-raw-ploop \
        tests/t00004-device-grow-online \
        tests/t00005-device-grow-offline \
        tests/t00006-device-snapshot-merge-online \
        tests/t00007-device-snapshot-merge-offline \
        tests/t00008-fs-resize-online \
        tests/t00009-fs-resize-offline

EXTRA_DIST = $(TESTS)
